--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "react": "^16.8.0",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^16.8.0",
     "react-scripts": "4.0.3",
+    "react-spotify-web-playback": "^0.8.1",
+    "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
