--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dat.gui": "^0.7.7",
     "react": "^16.8.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.8.0",
     "react-scripts": "4.0.3",
     "react-spotify-web-playback": "^0.8.1",
     "spotify-web-api-node": "^5.0.2",
+    "styled-components": "^5.2.3",
+    "three": "^0.128.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
